--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -81,7 +81,7 @@
 
         Вы легко можете получить доступ к заметке и мгновенно организовать свой список дел использую настраиваемый виджет, открывающий приложение одним касанием.
 
-        It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. It is fully opensource, provides customizable colors which can be adjusted with quick and fast tweaking. Прилодение имеет полностью открытый исходный код и позволяет полностью быстро и легко настроить цвета. 
+        It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. Приложение имеет полностью открытый исходный код, позволяет быстро и легко настроить цвета интерфейса. 
 
         <b>Simple Notes: To-do list organizer and planner</b> is the best item organizer and list planner you can use with no ads. If you need a high quality organizer for a quick and goodnotes, a reliable and user friendly reminder that is truly simple to use, download our app right now :) Have your own personal notebook in your pocket every day and have a backup planner so you will not have to worry about forgetting an important meeting or your shopping list :).
 
