--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -71,19 +71,15 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Eenvoudige planner: maak notities, takenlijsten en herinneringen</string>
     <string name="app_long_description">
-        ★ Need to take a quick note of something to buy, an address, or a startup idea? Then look no further as this is the simple organizer tool you\'ve been looking for : Simple Notes: To-do list organizer and planner! No complicated setup steps needed, just tap the screen and type in what you came for and create notes, quick lists, checklist or backup for any idea. With your simple personal notebook you can remember anything fast! Shopping for groceries, memorizing your thoughts and easier setting up reminders taking notes has never been easier ★
+        ★ Deze app is uiterst geschikt voor alle soorten notities, of het nu een lijstje boodschappen is, een adres of een idee voor een start-up. De app kan ook funguren als takenlijst en planner! Geen moeilijke stappen, gewoon intypen en de notitie, (afvink)lijst of herinnering staat veilig. Zo vergeet u nooit iets meer! ★
 
-        Simple notes planner is quick, simple to use organizer and remarkable planner and it will serve as an invaluable tool and companion, helping you to remember necessary piece of information!
+        Deze app is snelle en eenvoudig te gebruiken organizer en gebruiksvriendelijke planner. Het zal dienen als een onmisbaar hulpmiddel om allerlei zaken bij te houden!
 
-        Our reminder tool allows you to keep track of your duties,create daily checklist for items or ideas with unprecedented simplicity, notability and unrivaled time-saving value. Manage your schedule in a quick and simple manner.
+        De notities met herinneringen zullen automatisch worden opgeslagen; gegevens zullen dus nooit plotseling verdwenen zijn. Het is ook mogelijk om meerdere aparate notities en lijsten te maken.
 
-        This notebook reminder tool comes with autosave so you will not discard your changes by mistake. It also supports creating multiple independent plain text notes and lists very fast.
+        Met een aan te passen widget is een notitie of takenlijst onmiddellijk ter beschikking en zal deze direct geopend worden in de app met een simpele klik.
 
-        You can easily access the note and organize your to-do list in no time by using the customizable and resizable widget, which opens the app on tap.
-
-        It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. It is fully opensource, provides customizable colors which can be adjusted with quick and fast tweaking.
-
-        <b>Simple Notes: To-do list organizer and planner</b> is the best item organizer and list planner you can use with no ads. If you need a high quality organizer for a quick and goodnotes, a reliable and user friendly reminder that is truly simple to use, download our app right now :) Have your own personal notebook in your pocket every day and have a backup planner so you will not have to worry about forgetting an important meeting or your shopping list :).
+        <b>Eenvoudige Notities Pro: Takenlijst en memo\'s</b> is het beste notitieblok om in de broekzak mee te dragen en een app voor herinneringen aan afspraken en boodschappen, helemaal zonder advertenties.
 
         De app is ontworpen volgens material design en heeft standaard een donker thema. De app heeft geen toegang tot het internet nodig en voorziet van meer privacy, veiligheid en stabiliteit dan andere apps.
 
