--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -101,6 +101,7 @@
         <b>Reddit:</b>
         https://www.reddit.com/r/SimpleMobileTools
     </string>
+    <string name="remove_done_items">Remove done items</string>
 
     <!--
         Haven't found some strings? There's more at
