--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -55,7 +55,7 @@
     <string name="add_new_checklist_item">Adicionar item à lista de verificações</string>
     <string name="add_new_checklist_items">Adicionar itens à lista de verificação</string>
     <string name="checklist_is_empty">A lista está vazia</string>
-    <string name="remove_done_items">Remove done items</string>
+    <string name="remove_done_items">Remover itens realizados</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportar todas as notas como ficheiros</string>
