--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -56,6 +56,8 @@
     <string name="add_new_checklist_items">Προσθήκη νέων στοιχείων λίστας ελέγχου</string>
     <string name="checklist_is_empty">Η λίστα ελέγχου είναι κενή</string>
     <string name="remove_done_items">Remove done items</string>
+    <string name="move_to_top">Move to top</string>
+    <string name="move_to_bottom">Move to bottom</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Εξαγωγή όλων των σημειώσεων ως αρχεία</string>
