--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -56,6 +56,8 @@
     <string name="add_new_checklist_items">Engadir elementos a unha nova lista de verificación</string>
     <string name="checklist_is_empty">A lista de verificación está baleira</string>
     <string name="remove_done_items">Remove done items</string>
+    <string name="move_to_top">Move to top</string>
+    <string name="move_to_bottom">Move to bottom</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportar todas as notas como ficheiros</string>
