--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -56,6 +56,8 @@
     <string name="add_new_checklist_items">新しいチェックリスト項目を追加</string>
     <string name="checklist_is_empty">チェックリストが空です</string>
     <string name="remove_done_items">Remove done items</string>
+    <string name="move_to_top">Move to top</string>
+    <string name="move_to_bottom">Move to bottom</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">すべてのメモをファイルとしてエクスポート</string>
