--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -56,8 +56,8 @@
     <string name="add_new_checklist_items">Pridať do zoznamu nové položky</string>
     <string name="checklist_is_empty">Zoznam položiek je prázdny</string>
     <string name="remove_done_items">Odstrániť splnené položky</string>
-    <string name="move_to_top">Move to top</string>
-    <string name="move_to_bottom">Move to bottom</string>
+    <string name="move_to_top">Presunúť na vrch</string>
+    <string name="move_to_bottom">Presunúť na spodok</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
