--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -58,6 +58,8 @@
     <string name="remove_done_items">Remove done items</string>
     <string name="move_to_top">Move to top</string>
     <string name="move_to_bottom">Move to bottom</string>
+    <string name="paste_and_split">Paste and split</string>
+    <string name="split_text_with">Split text with</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Alle Notizen als Dateien exportieren</string>
