--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -58,6 +58,8 @@
     <string name="remove_done_items">Odstrániť splnené položky</string>
     <string name="move_to_top">Presunúť na vrch</string>
     <string name="move_to_bottom">Presunúť na spodok</string>
+    <string name="paste_and_split">Paste and split</string>
+    <string name="split_text_with">Split text with</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
