--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -48,7 +48,7 @@
     <string name="autosave_notes">حفظ الملاحظات تلقائيا</string>
     <string name="enable_line_wrap">تفعيل التفاف الخط</string>
     <string name="use_incognito_mode">استخدام وضع التصفح المتخفي للوحات المفاتيح</string>
-    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
+    <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
 
     <!-- Checklists -->
     <string name="checklist">قائمة تدقيق</string>
