--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -48,7 +48,7 @@
     <string name="autosave_notes">Awto-gadw nodiadau</string>
     <string name="enable_line_wrap">Galluogi amlapio llinellau</string>
     <string name="use_incognito_mode">Defnyddio modd cyfrinachol bysellfyrddau</string>
-    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
+    <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
 
     <!-- Checklists -->
     <string name="checklist">Rhestr wirio</string>
