--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -48,7 +48,7 @@
     <string name="autosave_notes">Autogem noter</string>
     <string name="enable_line_wrap">Aktiver tekstombrydning</string>
     <string name="use_incognito_mode">Anvend inkognito-tilstand til tastatur</string>
-    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
+    <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
 
     <!-- Checklists -->
     <string name="checklist">Tjekliste</string>
