--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -48,7 +48,7 @@
     <string name="autosave_notes">Автозбереження нотаток</string>
     <string name="enable_line_wrap">Продовжувати друк з нового рядка</string>
     <string name="use_incognito_mode">Використовувати режим Приватності в клавіатурі</string>
-    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
+    <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
 
     <!-- Checklists -->
     <string name="checklist">Список</string>
