--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,6 +19,10 @@
     <string name="note_shown_widget">Note affichée dans le widget:</string>
     <string name="new_note_type">Type de la note:</string>
     <string name="text_note">Texte</string>
+    <string name="lock_note">Lock note</string>
+    <string name="unlock_note">Unlock note</string>
+    <string name="note_content_locked">The notes\' content is locked.</string>
+    <string name="show_content">Show content</string>
 
     <!-- File notes -->
     <string name="open_file">Ouvrir le fichier</string>
