--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -19,6 +19,10 @@
     <string name="note_shown_widget">Nota amosada no widget:</string>
     <string name="new_note_type">Novo tipo de nota:</string>
     <string name="text_note">Nota de texto</string>
+    <string name="lock_note">Lock note</string>
+    <string name="unlock_note">Unlock note</string>
+    <string name="note_content_locked">The notes\' content is locked.</string>
+    <string name="show_content">Show content</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir ficheiro</string>
