--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -19,6 +19,10 @@
     <string name="note_shown_widget">Poznámka zobrazená vo widgete:</string>
     <string name="new_note_type">Typ novej poznámky:</string>
     <string name="text_note">Textová poznámka</string>
+    <string name="lock_note">Uzamknúť poznámku</string>
+    <string name="unlock_note">Odomknúť poznámku</string>
+    <string name="note_content_locked">Obsah poznámky je uzamknutý.</string>
+    <string name="show_content">Zobraziť obsah</string>
 
     <!-- File notes -->
     <string name="open_file">Otvoriť súbor</string>
