--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -19,6 +19,10 @@
     <string name="note_shown_widget">Нотатка, що показується у віджеті:</string>
     <string name="new_note_type">Новий тип нотаток:</string>
     <string name="text_note">Текст нотатки</string>
+    <string name="lock_note">Lock note</string>
+    <string name="unlock_note">Unlock note</string>
+    <string name="note_content_locked">The notes\' content is locked.</string>
+    <string name="show_content">Show content</string>
 
     <!-- File notes -->
     <string name="open_file">Відкрити файл</string>
