--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -19,6 +19,10 @@
     <string name="note_shown_widget">在小工具顯示的筆記:</string>
     <string name="new_note_type">新筆記類型:</string>
     <string name="text_note">文字筆記</string>
+    <string name="lock_note">Lock note</string>
+    <string name="unlock_note">Unlock note</string>
+    <string name="note_content_locked">The notes\' content is locked.</string>
+    <string name="show_content">Show content</string>
 
     <!-- File notes -->
     <string name="open_file">打開檔案</string>
