--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -19,11 +19,11 @@
     <string name="note_shown_widget">Σημείωση που εμφανίζεται στο widget:</string>
     <string name="new_note_type">Νέος τύπος σημείωσης:</string>
     <string name="text_note">Σημείωση κειμένου</string>
-    <string name="lock_note">Lock note</string>
-    <string name="unlock_note">Unlock note</string>
-    <string name="note_content_locked">The notes\' content is locked.</string>
-    <string name="show_content">Show content</string>
-    <string name="locking_warning">WARNING: If you forget the notes\' password, you won\'t be able to recover it or access the notes\' content anymore.</string>
+    <string name="lock_note">Κλείδωμα Σημείωσης</string>
+    <string name="unlock_note">Ξεκλείδωμα Σημείωσης</string>
+    <string name="note_content_locked">Το περιεχόμενο των Σημειώσεων είναι κλειδωμένο.</string>
+    <string name="show_content">Εμφάνιση περιεχομένου</string>
+    <string name="locking_warning">ΠΡΟΣΟΧΗ: Εάν ξεχάσετε τον κωδικό των σημειώσεων, δεν θα μπορείτε πλέον να τον ανακτήσετε ή να αποκτήσετε πρόσβαση στο περιεχόμενο τους.</string>
 
     <!-- File notes -->
     <string name="open_file">Άνοιγμα αρχείου</string>
